# eunoia-desktop

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  show_in_folder.rs  watch.rs
